// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/learn_more_trial_modal/learn_more_trial_modal_step should match snapshot 1`] = `
<div
  className="LearnMoreTrialModalStep slide-container"
  id="learnMoreTrialModalStep-stepId"
>
  <div
    className="stepClassname svg-wrapper"
  >
    <svg />
  </div>
  <div
    className="pre-title"
  >
    <MemoizedFormattedMessage
      defaultMessage="With Enterprise, you can..."
      id="learn_more_trial_modal.pretitle"
    />
  </div>
  <div
    className="title"
  >
    Step title
  </div>
  <div
    className="description"
  >
    Step description
  </div>
  <StartTrialBtn
    message="Start free 30-day trial"
    telemetryId="start_trial_from_learn_more_about_trial_modal"
  />
  <div
    className="disclaimer"
  >
    <span>
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="By clicking “Start trial”, I agree to the [Mattermost Software Evaluation Agreement,](!https://mattermost.com/software-evaluation-agreement) [privacy policy,](!https://mattermost.com/privacy-policy/) and receiving product emails."
        id="start_trial.modal.disclaimer"
      />
    </span>
  </div>
</div>
`;

exports[`components/learn_more_trial_modal/learn_more_trial_modal_step should match snapshot with optional params 1`] = `
<div
  className="LearnMoreTrialModalStep slide-container"
  id="learnMoreTrialModalStep-stepId"
>
  <div
    className="stepClassname svg-wrapper"
  >
    <svg />
  </div>
  <div
    className="pre-title"
  >
    <MemoizedFormattedMessage
      defaultMessage="With Enterprise, you can..."
      id="learn_more_trial_modal.pretitle"
    />
  </div>
  <div
    className="title"
  >
    Step title
  </div>
  <div
    className="description"
  >
    Step description
  </div>
  <StartTrialBtn
    message="Start free 30-day trial"
    telemetryId="start_trial_from_learn_more_about_trial_modal"
  />
  <div
    className="disclaimer"
  >
    <span>
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="By clicking “Start trial”, I agree to the [Mattermost Software Evaluation Agreement,](!https://mattermost.com/software-evaluation-agreement) [privacy policy,](!https://mattermost.com/privacy-policy/) and receiving product emails."
        id="start_trial.modal.disclaimer"
      />
    </span>
  </div>
  <div
    className="bottom-text-left-message"
  >
    Step bottom message
  </div>
</div>
`;
